syntax = "proto3";
package grpc_demo;

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message Result {
   string id = 1;
   string name = 2;
}

message SearchResponse {
  repeated Result results = 1;
}

message ListRequest {
  int32 result_per_page = 1;
}

message ListResponse {
  repeated Result results = 1;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
  rpc List (ListRequest) returns (ListResponse);
}
